// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`DHStxCogwheelLoader > renders with default text 1`] = `
<div>
  <div
    aria-live="polite"
    class="flex flex-col items-center justify-center space-y-4"
    role="status"
  >
    <div
      class="relative"
      style="width: 120px; height: 120px;"
    >
      <svg
        aria-hidden="true"
        class="absolute inset-0 m-auto w-4/5 h-4/5"
        style="transform: rotate(0deg);"
        viewBox="0 0 100 100"
      >
        <circle
          cx="50"
          cy="50"
          fill="#1A1A1A"
          r="20"
          stroke="#FFC96C"
          stroke-width="2"
        />
        <circle
          cx="50"
          cy="50"
          fill="none"
          r="35"
          stroke="#FFC96C"
          stroke-width="2"
        />
        <line
          stroke="#FFC96C"
          stroke-width="6"
          x1="85"
          x2="95"
          y1="50"
          y2="50"
        />
        <line
          stroke="#FFC96C"
          stroke-width="6"
          x1="74.74873734152916"
          x2="81.81980515339464"
          y1="74.74873734152916"
          y2="81.81980515339464"
        />
        <line
          stroke="#FFC96C"
          stroke-width="6"
          x1="50"
          x2="50"
          y1="85"
          y2="95"
        />
        <line
          stroke="#FFC96C"
          stroke-width="6"
          x1="25.25126265847084"
          x2="18.180194846605364"
          y1="74.74873734152916"
          y2="81.81980515339464"
        />
        <line
          stroke="#FFC96C"
          stroke-width="6"
          x1="15"
          x2="5"
          y1="50.00000000000001"
          y2="50.00000000000001"
        />
        <line
          stroke="#FFC96C"
          stroke-width="6"
          x1="25.251262658470832"
          x2="18.180194846605353"
          y1="25.25126265847084"
          y2="18.180194846605364"
        />
        <line
          stroke="#FFC96C"
          stroke-width="6"
          x1="49.99999999999999"
          x2="49.99999999999999"
          y1="15"
          y2="5"
        />
        <line
          stroke="#FFC96C"
          stroke-width="6"
          x1="74.74873734152916"
          x2="81.81980515339463"
          y1="25.251262658470832"
          y2="18.180194846605353"
        />
      </svg>
      <svg
        aria-hidden="true"
        class="absolute top-0 right-0 w-1/3 h-1/3"
        style="transform: rotate(0deg);"
        viewBox="0 0 100 100"
      >
        <circle
          cx="50"
          cy="50"
          fill="#1A1A1A"
          r="15"
          stroke="#FFC96C"
          stroke-width="2"
        />
        <circle
          cx="50"
          cy="50"
          fill="none"
          r="30"
          stroke="#FFC96C"
          stroke-width="2"
        />
        <line
          stroke="#FFC96C"
          stroke-width="5"
          x1="80"
          x2="90"
          y1="50"
          y2="50"
        />
        <line
          stroke="#FFC96C"
          stroke-width="5"
          x1="65"
          x2="70"
          y1="75.98076211353316"
          y2="84.64101615137754"
        />
        <line
          stroke="#FFC96C"
          stroke-width="5"
          x1="35.00000000000001"
          x2="30.000000000000007"
          y1="75.98076211353316"
          y2="84.64101615137756"
        />
        <line
          stroke="#FFC96C"
          stroke-width="5"
          x1="20"
          x2="10"
          y1="50.00000000000001"
          y2="50.00000000000001"
        />
        <line
          stroke="#FFC96C"
          stroke-width="5"
          x1="34.999999999999986"
          x2="29.999999999999982"
          y1="24.019237886466847"
          y2="15.358983848622458"
        />
        <line
          stroke="#FFC96C"
          stroke-width="5"
          x1="65"
          x2="70"
          y1="24.019237886466843"
          y2="15.358983848622458"
        />
      </svg>
    </div>
    <p
      class="font-mono text-xs text-[#B3B3B3]"
    >
      <span
        class="text-[#FFC96C]"
      >
        ▮
      </span>
       
      Processing...
    </p>
  </div>
</div>
`;

exports[`DHStxCogwheelLoader > renders without text when text prop is empty string 1`] = `
<div>
  <div
    aria-live="polite"
    class="flex flex-col items-center justify-center space-y-4"
    role="status"
  >
    <div
      class="relative"
      style="width: 120px; height: 120px;"
    >
      <svg
        aria-hidden="true"
        class="absolute inset-0 m-auto w-4/5 h-4/5"
        style="transform: rotate(0deg);"
        viewBox="0 0 100 100"
      >
        <circle
          cx="50"
          cy="50"
          fill="#1A1A1A"
          r="20"
          stroke="#FFC96C"
          stroke-width="2"
        />
        <circle
          cx="50"
          cy="50"
          fill="none"
          r="35"
          stroke="#FFC96C"
          stroke-width="2"
        />
        <line
          stroke="#FFC96C"
          stroke-width="6"
          x1="85"
          x2="95"
          y1="50"
          y2="50"
        />
        <line
          stroke="#FFC96C"
          stroke-width="6"
          x1="74.74873734152916"
          x2="81.81980515339464"
          y1="74.74873734152916"
          y2="81.81980515339464"
        />
        <line
          stroke="#FFC96C"
          stroke-width="6"
          x1="50"
          x2="50"
          y1="85"
          y2="95"
        />
        <line
          stroke="#FFC96C"
          stroke-width="6"
          x1="25.25126265847084"
          x2="18.180194846605364"
          y1="74.74873734152916"
          y2="81.81980515339464"
        />
        <line
          stroke="#FFC96C"
          stroke-width="6"
          x1="15"
          x2="5"
          y1="50.00000000000001"
          y2="50.00000000000001"
        />
        <line
          stroke="#FFC96C"
          stroke-width="6"
          x1="25.251262658470832"
          x2="18.180194846605353"
          y1="25.25126265847084"
          y2="18.180194846605364"
        />
        <line
          stroke="#FFC96C"
          stroke-width="6"
          x1="49.99999999999999"
          x2="49.99999999999999"
          y1="15"
          y2="5"
        />
        <line
          stroke="#FFC96C"
          stroke-width="6"
          x1="74.74873734152916"
          x2="81.81980515339463"
          y1="25.251262658470832"
          y2="18.180194846605353"
        />
      </svg>
      <svg
        aria-hidden="true"
        class="absolute top-0 right-0 w-1/3 h-1/3"
        style="transform: rotate(0deg);"
        viewBox="0 0 100 100"
      >
        <circle
          cx="50"
          cy="50"
          fill="#1A1A1A"
          r="15"
          stroke="#FFC96C"
          stroke-width="2"
        />
        <circle
          cx="50"
          cy="50"
          fill="none"
          r="30"
          stroke="#FFC96C"
          stroke-width="2"
        />
        <line
          stroke="#FFC96C"
          stroke-width="5"
          x1="80"
          x2="90"
          y1="50"
          y2="50"
        />
        <line
          stroke="#FFC96C"
          stroke-width="5"
          x1="65"
          x2="70"
          y1="75.98076211353316"
          y2="84.64101615137754"
        />
        <line
          stroke="#FFC96C"
          stroke-width="5"
          x1="35.00000000000001"
          x2="30.000000000000007"
          y1="75.98076211353316"
          y2="84.64101615137756"
        />
        <line
          stroke="#FFC96C"
          stroke-width="5"
          x1="20"
          x2="10"
          y1="50.00000000000001"
          y2="50.00000000000001"
        />
        <line
          stroke="#FFC96C"
          stroke-width="5"
          x1="34.999999999999986"
          x2="29.999999999999982"
          y1="24.019237886466847"
          y2="15.358983848622458"
        />
        <line
          stroke="#FFC96C"
          stroke-width="5"
          x1="65"
          x2="70"
          y1="24.019237886466843"
          y2="15.358983848622458"
        />
      </svg>
    </div>
  </div>
</div>
`;
